# HaskellVerbalExpressions

./: .gitignore  AUTHORS  README.md  examples.hs  verbalexpressions.cabal
Text/Regex/: VerbalExpressions.hs
Text/Regex/VerbalExpressions/: verbalexpressions.hs
